added image and test button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <h2>My First Subheading</h2>
 
 <p>My first paragraph.</p>
+<img src = "https://images.app.goo.gl/3s3oQ2fXZqQhJvsL8" alt = "wikipedia.com" width="50" height="50">
+
+ <button>I'm a test button. Click me</button> 
+
 <a href="goodbye.html"> Goodbye Page </a>
 
 
