--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h2>My First Subheading</h2>
 
 <p>My first paragraph.</p>
-<img src = "https://images.app.goo.gl/3s3oQ2fXZqQhJvsL8" alt = "wikipedia.com" width="50" height="50">
+<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/SNice.svg/1200px-SNice.svg.png" alt = "wikipedia.com" width="50" height="50">
 
  <button>I'm a test button. Click me</button> 
 
