--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 
 <p>My first paragraph.</p>
 <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/SNice.svg/1200px-SNice.svg.png" alt = "wikipedia.com" width="50" height="50">
-
+<br>
+<br>
  <button>I'm a test button. Click me</button> 
-
+<br>
+<br>
+<a href="https://www.linkedin.com/in/david-stansbury-4b296235/">  Find me on LinkedIn!</a>
+<br>
+<br>
 <a href="goodbye.html"> Goodbye Page </a>
 
 
